// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with a single expense 1`] = `
<div>
  <p>
    Viewing 
    1
     expense 
    totalling 
    $94.34
  </p>
</div>
`;

exports[`should render ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    2
     expenses 
    totalling 
    $94.34
  </p>
</div>
`;
